--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,11 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+
+home:
+  path: /home
+  controller: App\Controller\HomeController::index
+  
+# homeDeux:
+#   path: /home/deux
+#   controller: App\Controller\HomeController::show
